[gd_scene load_steps=9 format=3 uid="uid://cp1lycwjvfvbu"]

[ext_resource type="Script" path="res://InventoryResources/GDScripts/PlayerInventoryUI.gd" id="1_40yka"]
[ext_resource type="Texture2D" uid="uid://54r6ntyde5ku" path="res://Art/Images/Inventory/InventoryGrid.png" id="3_805em"]
[ext_resource type="PackedScene" uid="uid://dxwcslf2sife4" path="res://InventoryResources/Scenes/GridBlock.tscn" id="3_lho2p"]
[ext_resource type="Texture2D" uid="uid://bgk71dfa0v4q" path="res://Art/Images/Inventory/ItemBar.png" id="4_25wh8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c26w"]
size = Vector2(56, 655)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx6tn"]
size = Vector2(56, 655)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l04lm"]
size = Vector2(539, 47.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifhhy"]
size = Vector2(1187, 428.75)

[node name="PlayerInventoryUI" type="Control" groups=["Inventory"]]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_40yka")

[node name="EquippedBar" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -64.0
offset_right = 304.0
grow_horizontal = 2
grow_vertical = 0

[node name="EquippedSprite" type="Sprite2D" parent="EquippedBar"]
texture = ExtResource("4_25wh8")
centered = false

[node name="Control" type="Control" parent="EquippedBar"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
anchors_preset = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 604.0
offset_bottom = 64.0

[node name="EquippedContainer" type="HBoxContainer" parent="EquippedBar/Control" groups=["EquippedBar"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0133333
anchor_top = 0.125
anchor_right = -0.0133333
anchor_bottom = 0.125
offset_top = -7.0
offset_right = 608.0
offset_bottom = 57.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Equipped1" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped2" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped3" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped4" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped5" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped6" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped7" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped8" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Equipped9" type="Control" parent="EquippedBar/Control/EquippedContainer" groups=["EquipSlots"]]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="InvSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_805em")
centered = false

[node name="Grid" type="Node2D" parent="InvSprite"]
position = Vector2(21, 18)

[node name="GridContainer" type="GridContainer" parent="InvSprite/Grid"]
offset_right = 612.0
offset_bottom = 575.0
columns = 12

[node name="GridBlock" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock2" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock3" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock4" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock5" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock6" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock7" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock8" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock9" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock10" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock11" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock12" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock13" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock14" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock15" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock16" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock17" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock18" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock19" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock20" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock21" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock22" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock23" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock24" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock25" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock26" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock27" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock28" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock29" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock30" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock31" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock32" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock33" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock34" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock35" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock36" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock37" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock38" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock39" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock40" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock41" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock42" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock43" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock44" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock45" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock46" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock47" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock48" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock49" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock50" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock51" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock52" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock53" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock54" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock55" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock56" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock57" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock58" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock59" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock60" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock61" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="GridBlock62" parent="InvSprite/Grid/GridContainer" instance=ExtResource("3_lho2p")]
layout_mode = 2

[node name="ItemCollection" type="Node2D" parent="InvSprite" groups=["ItemColl"]]
unique_name_in_owner = true
position = Vector2(900, 330)

[node name="SubViewportContainer" type="SubViewportContainer" parent="InvSprite"]
offset_left = 835.0
offset_top = 50.0
offset_right = 963.0
offset_bottom = 178.0

[node name="InvSubViewport" type="SubViewport" parent="InvSprite/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 0

[node name="LooseContainer" type="StaticBody2D" parent="InvSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvSprite/LooseContainer"]
position = Vector2(659, 317.5)
shape = SubResource("RectangleShape2D_2c26w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InvSprite/LooseContainer"]
position = Vector2(1140, 318)
shape = SubResource("RectangleShape2D_bx6tn")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="InvSprite/LooseContainer"]
position = Vector2(902.5, 621.75)
shape = SubResource("RectangleShape2D_l04lm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="InvSprite/LooseContainer"]
position = Vector2(572.5, -217.625)
shape = SubResource("RectangleShape2D_ifhhy")

[node name="PickupSpawn" type="Marker2D" parent="InvSprite/LooseContainer"]
unique_name_in_owner = true
position = Vector2(896, 225)
